# ADT-Parser

./: .gitignore  Inferencer.hs  Main  Main.hs  Parser.hs  Type.hs  Types.hs  parser.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Inferencer.hs  Main.hs  Parser.hs  Types.hs
test/: Spec.hs
