name:                parser
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable parser
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base >=4.7 && <5, parsec
  default-language:    Haskell2010
  other-modules:       Parser, Inferencer, Types
