name:                parser
version:             0.1.0.0
synopsis:            A simple parser
description:         This package contains a simple parser.
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                       Types
  build-depends:       base >=4.7 && <5
                     , parsec
  default-language:    Haskell2010

test-suite parser-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , parsec
                     , hspec
                     , QuickCheck
                     , parser
  default-language:    Haskell2010
